<resources>
    <string name="app_name">GetScan</string>

    <!--IHM-->
    <string name="hint_url">URL</string>
    <string name="hint_endpoint">Endpoint</string>
    <string name="hint_first_chapter">First chapter</string>
    <string name="hint_last_chapter">Last chapter</string>
    <string name="hint_manga_name">Manga name</string>
    <string name="download_scan">Download scan</string>
    <string name="download_progress">%1d/%2d</string>
    <string name="show_errors">Show error(s)</string>

    <!--MENU-->
    <string name="menu_clear_error">CLear errors</string>

    <!--KEYS-->
    <string name="website_key">WEBSITE_KEY</string>
    <string name="base_url_key">BASE_URL_KEY</string>
    <string name="endpoint_key">ENDPOINT_KEY</string>
    <string name="first_chapter_key">FIRST_CHAPTER_KEY</string>
    <string name="last_chapter_key">LAST_CHAPTER_KEY</string>
    <string name="manga_name_key">MANGA_NAME_KEY</string>
</resources>